fix(footer): overflow

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,7 +1,7 @@
 .l-footer {
     display: flex;
     justify-content: space-between;
-    width: 100vw;
+    width: 100%;
     background-color: var(--black);
     padding: 4rem 8%;
     min-height: 250px;
